I think I'm done with the styling of the nonempty activity view, I have to remember the issues when resizing teh sidebar on mobile

--- a/src/css/based.css
+++ b/src/css/based.css
@@ -17,7 +17,6 @@
     --aside-bg: rgb(119, 154, 202);
     --period-bg: rgb(192, 193, 255);
     --project-bg: rgb(229, 97, 97);
-    --box-shadow: none;
 }
 
 :root.dark {
@@ -29,7 +28,6 @@
     --aside-bg: rgb(21, 38, 82);
     --period-bg: rgb(26, 191, 191);
     --project-bg: rgb(148, 108, 108);
-    --box-shadow:  0 0 5px 2px azure;
 }
 
 body {
@@ -37,7 +35,6 @@ body {
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: auto auto;
-    /* min-height: 100vh; */
 }
 
 /* NAV */
@@ -106,7 +103,6 @@ aside h2 {
 
 aside .activity button {
     background: var(--period-bg);
-    /* box-shadow: var(--box-shadow); */
     border: none;
     width: 100%;
     text-align: start;
@@ -150,7 +146,6 @@ aside .add-project:active {
 
 aside .project {
     background: var(--project-bg);
-    /* box-shadow: var(--box-shadow); */
     color: azure;
     text-align: center;
     margin: 20px 5px;
